--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <script>
   /* 게임 설정 및 문제 데이터 */
   const gameConfig = {
-  "gameTitle": "2021학년도 고3 10월 미적분",
+  "gameTitle": "2021학년도 고3 10월 확통",
   "defaultScore": 10,
   "bannerURL": "https://github.com/hwimath2/imagrfile/blob/main/%ED%9C%98%EB%A7%A4%EC%93%B0%EB%A1%9C%EA%B3%A0.png?raw=true",
   "randomizeQuestions": false,
@@ -1075,4 +1075,5 @@
   };
  </script>
 </body>
+
 </html>
